src/style/ng-geocoder.sass
.ng-geocoder__list
  margin: 0
  padding: 0
  width: 100%
  list-style: none
  background: #fff
  overflow-y: auto
  position: absolute
  border-bottom-left-radius: 3px
  border-bottom-right-radius: 3px
  box-shadow: 0 1px 10px rgba(0, 0, 0, .1)

.ng-geocoder__list__item
  cursor: pointer
  overflow: hidden
  padding: 10px 15px

  &:not(:last-child)
    border-bottom: 1px solid #ededed

  &:hover
    background: #f1f1f1

.ng-geocoder__list__item--focus
  background: #ededed

